<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/swipelayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/backbutton"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:src="@mipmap/ic_arrow"
                android:focusable="true"/>

            <ImageView
                android:id="@+id/multiidiomareg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:focusable="true"
                android:src="@mipmap/ic_language"/>

        </RelativeLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="128dp"
                      android:layout_marginBottom="15dp"
                      android:layout_marginTop="20dp">

            <RelativeLayout android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileimage"
                    android:layout_width="128dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_user_male128"
                    app:civ_border_color="#FF000000"/>

                <TextView
                    android:id="@+id/buttonImage"
                    android:layout_width="128sp"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/cambio_imagen"
                    android:textColor="@color/colorAccentLight"
                    android:textSize="16dp"
                    android:textStyle="bold"/>


            </RelativeLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:gravity="center"
                          android:orientation="vertical">
                <TextView
                    android:id="@+id/usernameprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/username"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/barrio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/barrio"
                    android:textColor="#424242"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
            </LinearLayout>


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nombre_up"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:paddingBottom="8dp"
            android:paddingTop="16dp">

            <EditText
                android:id="@+id/nameprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:fontFamily="sans-serif"
                android:hint="@string/nomusuario"
                android:inputType="textPersonName"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:textColor="#000"
                android:textColorHint="#e89b9696"
                android:textCursorDrawable="@null"
                android:textSize="16sp"
                android:textStyle="italic"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/codipostal_up"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:paddingBottom="8dp"
            android:paddingTop="16dp">

            <EditText
                android:id="@+id/codipostal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:fontFamily="sans-serif"
                android:hint="@string/codigopostal"
                android:inputType="number"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:textColor="#000"
                android:textColorHint="#e89b9696"
                android:textCursorDrawable="@null"
                android:textSize="16sp"
                android:textStyle="italic"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/fechanaix_up"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:paddingBottom="8dp"
            android:paddingTop="16dp">

            <EditText
                android:id="@+id/fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:fontFamily="sans-serif"
                android:hint="@string/fnaix"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:textColor="#000"
                android:textColorHint="#e89b9696"
                android:textCursorDrawable="@null"
                android:textSize="16sp"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"
                android:textStyle="italic"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/descriptionc_up"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:paddingBottom="8dp"
            android:paddingTop="16dp">

            <EditText
                android:id="@+id/descript"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:fontFamily="sans-serif"
                android:hint="@string/descrpicion"
                android:inputType="textMultiLine"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:textColor="#000"
                android:textColorHint="#e89b9696"
                android:textCursorDrawable="@null"
                android:textSize="16sp"
                android:textStyle="italic"/>

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/sexo"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:padding="8dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cps"
            android:textColor="@color/colorAccentLight"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:id="@+id/changePassword"/>

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_gravity="center"
                      android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">

                <Button
                    android:id="@+id/aceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:text="@string/saveButton"
                    android:background="@drawable/botonlogin"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:textSize="14sp"
                    android:visibility="visible"/>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/saveprogressbar"
                    android:layout_centerInParent="true"
                    style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
                    android:indeterminateDrawable="@drawable/progress_bar_circular_style"
                    android:visibility="gone"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">

                <Button
                    android:id="@+id/cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:text="@string/cancelButton"
                    android:background="@drawable/botoncancel"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:visibility="visible"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>