...
                    android:text="@string/fnaix2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/born"
                    android:textSize="18dp"
                    android:textColor="#424242"
                    android:text="random"/>

            </LinearLayout>

...
                android:text="@string/descripcion2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:id="@+id/description"
                android:textSize="18dp"
                android:textColor="#424242"
                android:text="random"/>



...
